Fargate_EFS/Kubernetes/blogapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogapp-service
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: clb # or "clb" or "alb"
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: blogapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      # nodePort: 30001
  type: NodePort
  # type: ClusterIP
  # type: LoadBalancer
