Fargate_EFS/Kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: blogapp
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

#  type: ClusterIP
