Fargate_EFS/Kubernetes/ingress-controller.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: ingress-nginx
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blogapp-service
              port:
                number: 80
